# iccloader

./: .gitignore  AUTHORS  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  iccloader-9999.ebuild
data/: iccloader.desktop.in.in  preferences.ui
po/: LINGUAS  POTFILES.in  it.po  ro.po
src/: main.vala
src/solpos/: README.solpos.md  build.sh  solpos.vapi  stest00_vala.vala
vapi/: config.vapi
